--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: session_jar
-description: A simple lightweight package for creating and maintaining sessions in dart.
-version: 0.0.1
+description: A simple server side package for creating and maintaining sessions in dart.
+version: 0.0.2
 repository: https://github.com/MaikHermens/session_jar
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 #dependencies:
-
 
 dev_dependencies:
   pedantic: ^1.9.0
